test/cases/compile_errors/import_outside_package.zig
export fn a() usize {
    return @import("../../above.zig").len;
}

// error
// target=native
//
// :2:20: error: import of file outside module path: '../../above.zig'
